--- a/new-website/html/index.html
+++ b/new-website/html/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/style-sheet.css">
+    <link rel="stylesheet" href="C:/Users/jeanh/Documents/GitHub/web-dev/new-website/css/style-sheet.css">
     <title></title>
   </head>
   <body>
