--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="C:/Users/jeanh/Documents/GitHub/web-dev/new-website/css/style-sheet.css">
     <title></title>
   </head>
-  <body>
+  <body style="background-color: red">
   <h1>hello</h1>
   </body>
 </html>
